--- a/time-tracker/src/assets/main.css
+++ b/time-tracker/src/assets/main.css
@@ -21,6 +21,10 @@ a,
   }
 }
 
+a:active {
+  background-color: hsla(160, 100%, 37%, 0.4);
+}
+
 @media (min-width: 1024px) {
   body {
     display: flex;
@@ -32,4 +36,25 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
+}
+
+input {
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+  transition: 0.4s;
+  background-color: transparent;
+
+  color: var(--color-text);
+  transition: 0.4s;
+}
+
+input:focus {
+  outline: none;
+  border-color: hsla(160, 100%, 37%, 1);
+  background-color: hsla(160, 100%, 37%, 0.2);
+}
+
+input:hover {
+  background-color: hsla(160, 100%, 37%, 0.2);
 }
